tests/marouter/errors/incomplete_connections/from_missing1of2_allowed/errors.marouter
Error: District '1' has no source.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
